# compiler

./: README.md  compiler.cabal  run.sh  run_tests.sh  shell.nix  stack.yaml  update_all_tests.sh
src/: AST.hs  Codegeneration.hs  IR.hs  LLVM.hs  Main.hs  Operands.hs  Parser.hs  Types.hs
src/Parser/: Lexer.hs  Parser.hs
test/: double_loop.in  fact.in  fib.in  int_if.in  int_loop.in  print_int.in
