name:                compiler
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       AST
                       Parser
                       Parser.Lexer
                       Parser.Parser
                       Codegeneration
                       IR
                       Types
                       LLVM
                       Operands
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       llvm-general,
                       llvm-general-pure,
                       containers >= 0.5,
                       mtl >= 2.2,
                       haskeline >= 0.7,
                       hspec
